RESOLVED FIXED157199
REGRESSION (r199640): position:absolute generated content inherits text-decoration from its element
https://bugs.webkit.org/show_bug.cgi?id=157199
Summary REGRESSION (r199640): position:absolute generated content inherits text-decor...
Adam Roben (:aroben)
Reported 2016-04-29 13:49:31 PDT
github.com uses position:absolute generated content to display tooltips on many elements. In Safari Technology Preview Version 9.1.1 (11601.6.17, 11602.1.29), tooltips on links are inheriting the link's text-decoration underline. This does not happen in Safari 9.1, Chrome 50, or Firefox 46. https://jsfiddle.net/dLqvL2Lz/6/ demonstrates the bug. In Safari 9.1, Chrome 50, and Firefox 46, the words "after content" are underlined in the first instance but not the second. In Safari Technology Preview, both instances are underlined. Note that the behavior in all browsers is unaffected by whether or not text-decoration:none is specified on the generated content.
Attachments
patch (4.94 KB, patch)
2016-04-30 21:59 PDT, Antti Koivisto
no flags
Simon Fraser (smfr)
Comment 1 2016-04-29 14:10:53 PDT
Radar WebKit Bug Importer
Comment 2 2016-04-29 14:12:12 PDT
Antti Koivisto
Comment 3 2016-04-30 21:59:38 PDT
WebKit Commit Bot
Comment 4 2016-04-30 23:07:03 PDT
Comment on attachment 277842 [details] patch Clearing flags on attachment: 277842 Committed r200302: <http://trac.webkit.org/changeset/200302>
WebKit Commit Bot
Comment 5 2016-04-30 23:07:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.