REGRESSION (r199640): position:absolute generated content inherits text-decoration from its element https://bugs.webkit.org/show_bug.cgi?id=157199 <rdar://problem/26013111>

Reviewed by Zalan Bujtas.

Source/WebCore:

Test: fast/css/text-decoration-inheritance-pseudo.html

* css/StyleResolver.cpp:
(WebCore::doesNotInheritTextDecoration):
(WebCore::StyleResolver::adjustRenderStyle):

    There was an accidental logic change here. Even if element is null other conditions may make this test true.

LayoutTests:

* fast/css/text-decoration-inheritance-pseudo-expected.html: Added.
* fast/css/text-decoration-inheritance-pseudo.html: Added.


Canonical link: https://commits.webkit.org/175342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200302 268f45cc-cd09-0410-ab3c-d52691b4dbfc